# photodisplay

./: .env.example  .firebaserc  .gitignore  E2E_README.md  LOCAL_SETUP.md  README.md  README_LOCAL.md  SECURITY.md  apphosting.yaml  cypress.config.ts  db_schema.sql  docker-compose.yml  firebase.json  health_check.py  package.json  photo_app_instruction.json  requirements.txt  setup.bat  setup.sh
.idx/: dev.nix
backend/: Dockerfile  README.md  check_import.py  pyproject.toml
backend/app/: auth.py  config.py  main.py  schemas.py
backend/app/api/: __init__.py  auth.py  auth_deps.py  deps.py  photos.py  settings.py
backend/app/middleware/: security.py
backend/app/models/: database.py  entities.py
backend/app/queues/: events.py
backend/app/services/: storage.py
backend/app/utils/: file_validation.py  validation.py
backend/tests/: conftest.py  test_auth.py  test_health.py
e2e/: heuristics.cy.ts
frontend/: README.md  index.html  install_log.txt  manifest.webmanifest  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: service-worker.js
frontend/src/: apiClient.ts  firebase.ts  main.tsx  polyfills.ts  types.ts
frontend/src/components/: ErrorBanner.tsx  Header.tsx  LoadingScreen.tsx  LocationForm.tsx  LoginForm.tsx  PhotoGrid.tsx  PhotoMeta.tsx  UploadSection.tsx
frontend/src/hooks/: usePhotos.tsx
frontend/src/routes/: App.tsx  (+4 more)
scripts/: export_patch.sh
workers/: README.md  pyproject.toml
workers/photodisplay_workers/: ai_caption_worker.py  derivative_worker.py  exif_worker.py  geocode_worker.py
(+1 files in other folders)
