[project]
name = "photodisplay-backend"
version = "0.1.0"
description = "FastAPI backend for personal photo display"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "python-multipart==0.0.9",
  "boto3==1.34.162",
  "google-auth==2.35.0",
  "httpx==0.27.0",
  "pydantic-settings==2.2.1",
  "sqlalchemy==2.0.31",
  "asyncpg>=0.29.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-magic==0.4.27",
  "pillow==10.4.0"
]

[tool.uvicorn]
factory = true
